--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <hr />
     <h2>درجة عشوائية</h2>
     <h4 id="random-grade"></h4>
+
+    <div id="all_grades_div">
+      <span>20</span>
+      <span>20</span>
+      <span>20</span>
+      <span>20</span>
+      <span>20</span>
+      <span>20</span>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
