--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h4 id="all-grades"></h4>
     <hr />
     <h1>بحث عن درجة</h1>
-    <input type="number" name="grade" id="input" />
+    <input onchange="search()" type="number" name="grade" id="input" />
     <h4 id="search-grades"></h4>
     <hr />
     <h2>A الطلاب الحاصلين على</h2>
@@ -21,14 +21,7 @@
     <h2>درجة عشوائية</h2>
     <h4 id="random-grade"></h4>
 
-    <div id="all_grades_div">
-      <span>20</span>
-      <span>20</span>
-      <span>20</span>
-      <span>20</span>
-      <span>20</span>
-      <span>20</span>
-    </div>
+    <div id="all_grades_div"></div>
     <script src="./script.js"></script>
   </body>
 </html>
